--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
       <title>Woog</title>
       <link rel="stylesheet" href="styles.css" />
       <link rel="icon" type="image/png" href="assets/ico_x.png" />
+      <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Lilita+One&display=swap" rel="stylesheet">
    </head>
    <body>
       <div class="container">
