--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
          <div class="contract-container">
             <div class="contract-box" onclick="copyContract()">
                <span class="contract-text"
-                  >Ev4TKnud8NCfMagEWaAdFvhkUznYqECY583eQYjgoom</span
+                  >78Xxh4yrBahSskAYpxmG5LHuA65EksrXkjZQKZoRpump</span
                >
                <div class="copy-notification">Copied!</div>
             </div>
@@ -25,7 +25,7 @@
 
          <div class="buy-button">
             <a
-               href="https://raydium.io/swap/?inputMint=sol&outputMint=Ev4TKnud8NCfMagEWaAdFvhkUznYqECY583eQYjgoom"
+               href="https://jup.ag/swap/SOL-78Xxh4yrBahSskAYpxmG5LHuA65EksrXkjZQKZoRpump"
                target="_blank"
                rel="noopener noreferrer"
             >
@@ -42,21 +42,21 @@
                <img src="assets/dex_1.png" alt="Raydium DEX" class="icon" />
             </a>
             <a
-               href="https://dexscreener.com/solana/Ev4TKnud8NCfMagEWaAdFvhkUznYqECY583eQYjgoom"
+               href="https://dexscreener.com/solana/78Xxh4yrBahSskAYpxmG5LHuA65EksrXkjZQKZoRpump"
                target="_blank"
                rel="noopener noreferrer"
             >
                <img src="assets/dex_2.png" alt="Jupiter DEX" class="icon" />
             </a>
             <a
-               href="https://x.com/GoomyAlien"
+               href="https://x.com/WoogSol"
                target="_blank"
                rel="noopener noreferrer"
             >
                <img src="assets/x.png" alt="Twitter" class="icon" />
             </a>
             <a
-               href="https://t.me/GoomyAlien"
+               href="ttps://t.me/WoogSol"
                target="_blank"
                rel="noopener noreferrer"
             >
