--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
          <div class="buy-button">
             <a
-               href="https://jup.ag/swap/SOL-78Xxh4yrBahSskAYpxmG5LHuA65EksrXkjZQKZoRpump"
+               href="input=So11111111111111111111111111111111111111112&output=78Xxh4yrBahSskAYpxmG5LHuA65EksrXkjZQKZoRpump"
                target="_blank"
                rel="noopener noreferrer"
             >
@@ -35,7 +35,7 @@
 
          <div class="social-icons">
             <a
-               href="https://www.dextools.io/app/en/solana/pair-explorer/78Xxh4yrBahSskAYpxmG5LHuA65EksrXkjZQKZoRpump"
+               href="https://www.dextools.io/app/en/solana/pair-explorer/2YL8id64abRPEg7TMFBbNQ4toFbrSULBBhgiqpa5L9SV?t=1748167559251"
                target="_blank"
                rel="noopener noreferrer"
             >
