--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                <img src="assets/x.png" alt="Twitter" class="icon" />
             </a>
             <a
-               href="ttps://t.me/WoogSol"
+               href="https://t.me/WoogSol"
                target="_blank"
                rel="noopener noreferrer"
             >
