--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
          <div class="buy-button">
             <a
-               href="input=So11111111111111111111111111111111111111112&output=78Xxh4yrBahSskAYpxmG5LHuA65EksrXkjZQKZoRpump"
+               href="https://jup.ag/swap/SOL-78Xxh4yrBahSskAYpxmG5LHuA65EksrXkjZQKZoRpump"
                target="_blank"
                rel="noopener noreferrer"
             >
