--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
    <meta charset="UTF-8" />
    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-   <title>Woog</title>
+   <title>Spoo</title>
    <link rel="stylesheet" href="styles.css" />
    <link rel="icon" type="image/png" href="assets/ico_x.png" />
    <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -14,28 +14,28 @@
 
 <body>
    <div class="container">
-      <img src="assets/title.png" alt="Woog" class="title" />
+      <img src="assets/title.png" alt="Spoo" class="title" />
 
       <div class="contract-container">
          <div class="contract-box" onclick="copyContract()">
-            <span class="contract-text">78Xxh4yrBahSskAYpxmG5LHuA65EksrXkjZQKZoRpump</span>
+            <span class="contract-text">FBHqrCJ8qYjTZpxEhaCVM7FNcKZH8JPWanmXgPacpump</span>
             <div class="copy-notification">Copied!</div>
          </div>
       </div>
 
       <div class="buy-button">
-         <a href="https://jup.ag/swap/SOL-78Xxh4yrBahSskAYpxmG5LHuA65EksrXkjZQKZoRpump" target="_blank"
+         <a href="https://jup.ag/swap/SOL-FBHqrCJ8qYjTZpxEhaCVM7FNcKZH8JPWanmXgPacpump" target="_blank"
             rel="noopener noreferrer">
             <img src="assets/buy_now.png" alt="Buy Now" class="buy-now" />
          </a>
       </div>
 
       <div class="social-icons">
-         <a href="https://www.dextools.io/app/en/solana/pair-explorer/2YL8id64abRPEg7TMFBbNQ4toFbrSULBBhgiqpa5L9SV?t=1748167559251"
+         <a href="https://www.dextools.io/app/en/solana/pair-explorer/CbYhRKfehaBgLvmLXmqtX843uxGCye813UFJxMJukKGx?t=1748428743676"
             target="_blank" rel="noopener noreferrer">
             <img src="assets/dex_1.png" alt="Raydium DEX" class="icon" />
          </a>
-         <a href="https://dexscreener.com/solana/78Xxh4yrBahSskAYpxmG5LHuA65EksrXkjZQKZoRpump" target="_blank"
+         <a href="https://dexscreener.com/solana/FBHqrCJ8qYjTZpxEhaCVM7FNcKZH8JPWanmXgPacpump" target="_blank"
             rel="noopener noreferrer">
             <img src="assets/dex_2.png" alt="Jupiter DEX" class="icon" />
          </a>
